--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #F9EBEA;
+    background: #f3ecec;
     font-family: 'Times New Roman', Times, serif;
 }
 
@@ -9,8 +9,8 @@ body {
 }
 
 .assignment img{
-    width:320px;
-    height: 400px;
+    width:460px;
+    height: 490px;
     padding:10px;
 }
 
