--- a/style.css
+++ b/style.css
@@ -1,20 +1,40 @@
 body {
-    background: #f3ecec;
+    background: #CFECEC;
     font-family: 'Times New Roman', Times, serif;
 }
 
 .assignment{
     display:flex;
     padding: 10px;
+    margin: 10px;
+    background:#92C7C7;
+    border-radius: 10px;
 }
 
 .assignment img{
-    width:360px;
-    height: 390px;
-    padding:10px;
+    width:200px; 
+    padding:2px;
+    margin: 10px;
+    border: 4px dotted #022b2b;
+}
+.assignment img:hover {
+    border: 4px solid #CFECEC;
 }
 
 h1 {
-    color: #7B241C ;
+    color: #2C3539 ;
     text-align: center;
+}
+
+h1:hover {
+    color: #04a1a1  ;
+}
+
+a { 
+     text-decoration: none;
+     color: #25383C;
+}
+
+a:hover {
+    color:#CFECEC;
 }
